# InfiniTime

./: .ccls.in  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt
doc/: CalendarEventService.md  ble.md
docker/: .gitpod.Dockerfile
src/: CMakeLists.txt  FlatLinkedList.h
src/components/ble/: CalendarEventService.cpp  CalendarEventService.h  NimbleController.cpp  NimbleController.h
src/components/datetime/: DateTimeController.cpp  DateTimeController.h
src/displayapp/: Apps.h  DisplayApp.cpp
src/displayapp/fonts/: fonts.json
src/displayapp/screens/: ApplicationList.cpp  ApplicationList.h  CalendarTimeline.cpp  CalendarTimeline.h  Symbols.h  TeaTimer.cpp  TeaTimer.h
tests/: .ccls  .clang-tidy  CMakeLists.txt  test_CalendarEvent.cpp  test_FlatLinkedList.cpp
tests/dummy_libs/: nrf_log.h
tests/dummy_libs/host/: ble.h  ble_att.h  ble_gap.h  ble_gatt.h  ble_hs.h  ble_uuid.h
tests/dummy_libs/os/: os_mbuf.h
tests/dummy_libs/systemtask/: SystemTask.h
